# painterRHIT

./: #kh401w23.001.txt#  .gitignore  README.md  compile.pl  kh401w23.001.txt  notes.txt  test  test.c
ABB_source/DynamicPaintCups/: DynamicPaintCups.pgf  PainterTest.mod
ABB_source/Painter/: Painter.mod
ABB_source/SerialTest/: SerialTest.mod
BobRoss/: 11AmWorkspace.xml  BobRoss.pro  BobRoss.sln  BobRoss.vcxproj  BobRoss.vcxproj.filters  CVImageWidget.cpp  CVImageWidget.h  CommandWindow.cpp  CommandWindow.h  CommandWindow.ui  CytonRunner.cpp  CytonRunner.h  CytonRunner.ui  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  ExampleCanvas.xml  HappyMan.xml  Painter.cpp  Painter.h  RunLogic.cpp  RunLogic.h  SerialPortHelper.h  Sketchpad.cpp  Sketchpad.h  Sketchpad.ui  StartWindow.ui  TestingMerge.xml  abbhelper.ui  brushUI.ui  cannyUI.ui  colorChangeUI.ui  drawwindow.cpp  helperMethods.cpp  helperMethods.h  kMeansUI.ui  main.cpp  myres.qrc  shapes.cpp  workspaceExample.xml  (+1 more)
BobRoss/GeneratedFiles/: qrc_myres.cpp  ui_CommandWindow.h  ui_CytonRunner.h  ui_EditorWindow.h  ui_Sketchpad.h  ui_StartWindow.h  ui_abbhelper.h  ui_brushUI.h  ui_cannyUI.h  ui_colorChangeUI.h  ui_kMeansUI.h  ui_workspacewizard.h
BobRoss/Visual Studio Solution/: BobRoss.sln
BobRoss/property files/: MyProps.props  imageSensor.ecp
CImg/: setup.txt~  test.c  test.c~
ColorRunner/: ColorRunner.sln  colors.cpp
ColorRunner/ColorRunner/: ColorRunner.vcxproj  ColorRunner.vcxproj.filters
GUI in progress/: CVImageWidget.h  Circle.cpp  CytonController.cpp  CytonController.h  FirstAttempt.pro  FirstAttempt.vcxproj  FirstAttempt.vcxproj.filters  FreeForm.cpp  Line.cpp  Line.h  Makefile  Makefile.Debug  Makefile.Release  PainterGuiVSSolution.sln  Picasso.pri  Picasso.pro  Picasso.vcxproj  Picasso.vcxproj.filters  Robot.cpp  Robot.h  Shape.cpp  Shape.h  Solid.cpp  Solid.h  Square.cpp  Square.h  WebcamHandler.cpp  WebcamHandler.h  WorkSpace.cpp  WorkSpace.h  comandeditor.cpp  comandeditor.h  commandeditor.cpp  commandeditor.h  commandeditor.ui  commandeditorcreator.cpp  commandeditorcreator.h  commandinterpreter.cpp  commandinterpreter.h  commandviewer.cpp  (+21 more)
GUI in progress/GeneratedFiles/: qrc_myres.cpp  ui_Line.h  ui_commandeditor.h  ui_commandviewer.h  ui_mainwindow.h  ui_solid.h
GUI in progress/Gui Visual Studio/: Picasso.sln
GunnarColorRunner/: GunnarColorRunner.sln
OpenCV Computer Vision Application Programming [Video]/V009_02_Codes/02 - Beginning OpenCV/05 - Drawing shapes/: CMakeLists.txt  main.cpp
OpenCV Computer Vision Application Programming [Video]/V009_03_Codes/03 - Image Processing/02 - Understanding image morphology/: CMakeLists.txt
OpenCV Computer Vision Application Programming [Video]/V009_03_Codes/03 - Image Processing/04 - Understanding histograms/: CMakeLists.txt
OpenCV Computer Vision Application Programming [Video]/V009_04_Codes/04 - Segmenting images and obtaining interesting points/01 - Clustering data with k-means/: CMakeLists.txt  run
OpenCV Computer Vision Application Programming [Video]/V009_04_Codes/04 - Segmenting images and obtaining interesting points/03 - Segmenting an image using the grabcut algorithm/: CMakeLists.txt  run
OpenCV Computer Vision Application Programming [Video]/V009_04_Codes/04 - Segmenting images and obtaining interesting points/04 - Finding and matching interesting points/: CMakeLists.txt  run
OpenCV Computer Vision Application Programming [Video]/V009_05_Codes/05 - Computational photography/03 - Enhancing low light photographs/: CMakeLists.txt  enhanceLowLight.cpp
OpenCV Computer Vision Application Programming [Video]/V009_06_Codes/06 - Recognizing Objects/01 - Detecting Shapes/: CMakeLists.txt  chamfer.cpp
OpenCV Computer Vision Application Programming [Video]/V009_06_Codes/06 - Recognizing Objects/02 - Detecting Faces/: CMakeLists.txt
OpenCV Computer Vision Application Programming [Video]/V009_06_Codes/06 - Recognizing Objects/05 - Recognizing faces/: CMakeLists.txt
OpenCV Computer Vision Application Programming [Video]/V009_07_Codes/07 - Calibrating and working with stereo images/03 - Projecting an image/: CMakeLists.txt  warp.cpp
OpenCV Computer Vision Application Programming [Video]/V009_07_Codes/07 - Calibrating and working with stereo images/04 - Understanding stereo images/: CMakeLists.txt  intrinsics.yml
PointMapTest2/: PointMapTest2.opensdf  PointMapTest2.sln
ShapeRunner/: boost.props  drawwindow.cpp  shape_demo.cpp  shapes.cpp
Superpixels/: .gitignore
Webcam/: Webcam.cpp
WriteRAPIDFile/: Brush.cpp  Brush.hpp  Drawing.cpp  Drawing.hpp
WriteROBOFORTHFile/: Brush.cpp  Brush.hpp  Drawing.cpp  Drawing.hpp  WriteROBOFORTHFile.cpp
build-FirstAttempt-Desktop_Qt_5_4_2_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.FirstAttempt.Debug  object_script.FirstAttempt.Release  ui_mainwindow.h
build-Picasso-Desktop_Qt_5_4_2_MinGW_32bit-Debug/: Makefile  Makefile.Debug  Makefile.Release  object_script.FirstAttempt.Debug  object_script.FirstAttempt.Release
demos/: #capture.cpp#  .#capture.cpp  CytonRunner.cpp  canny_edge  canny_edge.cpp~  capture  capture.cpp  colors.cpp  contours  contours.cpp  contours.cpp~  drawwindow.cpp  first  first.cpp~  gaussian  gaussian.cpp~  helpers.cpp  imageparser  imageparser.cpp  imageparser_demo  imageparser_demo.cpp  invert.cpp  invert.cpp~  kmeans2.cpp  kmeansSegment.cpp~  kmeansSegment.hpp  kmeansSegment.hpp~  linefeedback  linefeedback.cpp  paintpath.cpp  parser.cpp  pixeltools.cpp  projector_calibrate.cpp  pugixml.hpp  regiontopath.cpp  regiontopath_demo  regiontopath_demo.cpp  regiontopaths.cpp  regiontopaths_demo  regiontopaths_demo.cpp  (+15 more)
simulator/: simulation.cpp
visualStudioCyton/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  Cyton.props  CytonCV.sln  OpenCV-Release.props  OpenCV.props  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  boost.props  cmake_install.cmake  cytonCommandExample.sln  cytonCommandExample.vcxproj  cytonCommandExample.vcxproj.filters  main.cpp
(+299 files in other folders)
